<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28pt"
        android:padding="20dp"
        android:layout_marginTop="30dp"
        android:text=""
        android:id="@+id/ans"
        android:gravity="right"

        />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_margin="20dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp">
            <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="18pt"
                android:id="@+id/one"
                android:text="@string/one"></Button>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="18pt"
                android:id="@+id/two"
                android:text="@string/two"></Button>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="18pt"
                android:id="@+id/three"
                android:text="@string/three"></Button>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="18pt"
                android:id="@+id/mult"
                android:text="@string/mult"></Button>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="18pt"
                android:id="@+id/four"
                android:text="@string/four"></Button>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="18pt"
                android:id="@+id/five"
                android:text="@string/five"></Button>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="18pt"
                android:id="@+id/six"
                android:text="@string/six"></Button>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="18pt"
                android:id="@+id/div"
                android:text="@string/div"></Button>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="18pt"
                android:id="@+id/seven"
                android:text="@string/seven"></Button>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="18pt"
                android:id="@+id/eight"
                android:text="@string/eight"></Button>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="18pt"
                android:id="@+id/nine"
                android:text="@string/nine"></Button>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="18pt"
                android:id="@+id/min"
                android:text="@string/min"></Button>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="18pt"
                android:id="@+id/zero"
                android:text="@string/zero"></Button>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="18pt"
                android:id="@+id/dot"
                android:text="@string/dot"></Button>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="18pt"
                android:id="@+id/eq"
                android:text="@string/eq"></Button>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="18pt"
                android:id="@+id/plus"
                android:text="@string/plus"></Button>
        </TableRow>
    </TableLayout>
<TableLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="8pt"
            android:padding="20dp"
            android:layout_gravity="right"
            android:id="@+id/clear"
            android:text="@string/clear"></Button>

    </TableRow>
</TableLayout>

</LinearLayout>